--- a/index.html
+++ b/index.html
@@ -511,15 +511,13 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
                         <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
-                        How fit do I need to be?
+                        How far do you run? How much time does it take?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">We typically run in <span class="font-bold">two groups</span>: the <span class="font-bold">discovery trail</span>, usually a loop of around <span class="font-bold">8km with 250m D+</span>, and the <span class="font-bold">advanced trail</span>, typically around <span class="font-bold">12km with 400m D+</span>. Run durations vary by pace, but plan for 1.5 to 2.5 hours.</p>
                 </div>
 <div class="mb-10">
     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
         <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
-                        How fit do I need to be?
-                        How fit do I need to be?
         Besides the Thursday community run, what else does the community offer?
     </h3>
     <p class="text-gray-500 dark:text-gray-400">Our community offers much more than just our weekly Thursday runs! We regularly organize various events and activities, including:</p>
@@ -540,7 +538,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
                         <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
-                        How fit do I need to be?
+                        Do I need to sign up?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">No, you can <span class="font-bold">just show up - no registration needed!</span> If it's your first time running with us, we'd appreciate it if you come a little bit earlier to say hi so we can welcome you properly.</p>
                 </div>
@@ -548,15 +546,15 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
                         <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
-                        How fit do I need to be?
+                        Do I need special gear, shoes or equipment for trail running?
                     </h3>
-                    <p class="text-gray-500 dark:text-gray-400">Your <span class="font-bold">trail running shoes</span> are the most important piece of gear. We even provide a limited set of shoes for those who don't have trail shoes yet and want to try them out! We also recommend a trail running backpack with some water, a light jacket, and a snack, but that's up to you.</p>
+                    <p class="text-gray-500 dark:text-gray-400">Your <span class="font-bold">trail running shoes</span> are the most important piece of gear. We even provide trail running shoes for those who don't have trail shoes yet and want to try them out! We also recommend a trail running backpack with some water, a light jacket, and a snack, but that's up to you.</p>
                 </div>
 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
                         <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
-                        How fit do I need to be?
+                        How do I stay up to date about upcoming events and changes?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">All our upcoming community runs, workshops, and special events are listed on our <a href="events.html" class="text-blue-600 hover:underline dark:text-blue-500">Events page</a>. We highly recommend joining our <span class="font-bold">WhatsApp Announcement Channel</span>, as we always post the fastest and most accurate updates there.</p>
                 </div>
@@ -564,7 +562,6 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
                 <div class="mb-10">
                     <h3 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
                         <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
-                        How fit do I need to be?
                         I'd like to contribute to the community. How can I help?
                     </h3>
                     <p class="text-gray-500 dark:text-gray-400">That's great! We're always happy to have people help lead the groups on Thursdays, as well as support other initiatives like organizing a (weekend) event, workshop, or lecture. In the past, people have provided strength training sessions, nutrition workshops, and even organized casual races. Please reach out to us by filling out the <a href="contact.html" class="text-blue-600 hover:underline dark:text-blue-500">contact form</a> or by sending us a message on WhatsApp.</p>
