--- a/about/index.html
+++ b/about/index.html
@@ -220,7 +220,7 @@ At the heart of DNA Trails is a simple idea: trail running should be welcoming, 
 
     <h2 class="text-3xl font-bold mb-4 text-gray-900 dark:text-white">Want to help shape the future?</h2>
     <p class="mb-6 text-lg">Our community is run by volunteers. We welcome new guides, ideas for workshops, co-hosts for events, or even fun Instagram takeovers. If you’d like to contribute — big or small — we’d love to hear from you.</p>
-    <a href="contact.html" class="inline-block bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg shadow hover:bg-blue-700 transition">Contact Us</a>
+    <a href="/contact/contact.html" class="inline-block bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg shadow hover:bg-blue-700 transition">Contact Us</a>
   </main>
 </section>
 <script src="/scripts/navbar.js"></script>
