--- a/index.html
+++ b/index.html
@@ -527,10 +527,10 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
         <li class="mb-1">Additional <span class="font-bold">community runs</span> on weekends and other weekdays, sometimes even bike rides for cross-training.</li>
         <li class="mb-1"><span class="font-bold">Social events</span> like Christmas get-togethers or post-run drinks, fostering our strong community spirit.</li>
         <li class="mb-1">
-  <span class="font-bold">Specific routes</span>, created and shared by the community in and around Innsbruck. You can find them <a href="routes.html" class="text-blue-600 hover:underline dark:text-blue-500">here</a>.
+  <span class="font-bold">Specific routes</span>, created and shared by the community in and around Innsbruck. You can find them <a href="/routes/index.html" class="text-blue-600 hover:underline dark:text-blue-500">here</a>.
 </li>
     </ul>
-    <p class="text-gray-500 dark:text-gray-400 mt-4">We also have a separate <span class="font-bold">WhatsApp Group Chat</span> for members to spontaneously meet up for runs or other activities throughout the week, beyond the official schedule. Be sure to keep an eye on our <a href="events.html" class="text-blue-600 hover:underline dark:text-blue-500">Events page</a> and <span class="font-bold">WhatsApp Announcement Channel</span> for all these special happenings!</p>
+    <p class="text-gray-500 dark:text-gray-400 mt-4">We also have a separate <span class="font-bold">WhatsApp Group Chat</span> for members to spontaneously meet up for runs or other activities throughout the week, beyond the official schedule. Be sure to keep an eye on our <a href="/calendar/index.html" class="text-blue-600 hover:underline dark:text-blue-500">Events page</a> and <span class="font-bold">WhatsApp Announcement Channel</span> for all these special happenings!</p>
 </div>
             </div>
 
@@ -556,7 +556,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
                         <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         How do I stay up to date about upcoming events and changes?
                     </h3>
-                    <p class="text-gray-500 dark:text-gray-400">All our upcoming community runs, workshops, and special events are listed on our <a href="events.html" class="text-blue-600 hover:underline dark:text-blue-500">Events page</a>. We highly recommend joining our <span class="font-bold">WhatsApp Announcement Channel</span>, as we always post the fastest and most accurate updates there.</p>
+                    <p class="text-gray-500 dark:text-gray-400">All our upcoming community runs, workshops, and special events are listed on our <a href="/calendar/index.html" class="text-blue-600 hover:underline dark:text-blue-500">Events page</a>. We highly recommend joining our <span class="font-bold">WhatsApp Announcement Channel</span>, as we always post the fastest and most accurate updates there.</p>
                 </div>
 
                 <div class="mb-10">
@@ -564,7 +564,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
                         <svg class="flex-shrink-0 mr-2 w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="https://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg>
                         I'd like to contribute to the community. How can I help?
                     </h3>
-                    <p class="text-gray-500 dark:text-gray-400">That's great! We're always happy to have people help lead the groups on Thursdays, as well as support other initiatives like organizing a (weekend) event, workshop, or lecture. In the past, people have provided strength training sessions, nutrition workshops, and even organized casual races. Please reach out to us by filling out the <a href="contact.html" class="text-blue-600 hover:underline dark:text-blue-500">contact form</a> or by sending us a message on WhatsApp.</p>
+                    <p class="text-gray-500 dark:text-gray-400">That's great! We're always happy to have people help lead the groups on Thursdays, as well as support other initiatives like organizing a (weekend) event, workshop, or lecture. In the past, people have provided strength training sessions, nutrition workshops, and even organized casual races. Please reach out to us by filling out the <a href="/contact/contact.html" class="text-blue-600 hover:underline dark:text-blue-500">contact form</a> or by sending us a message on WhatsApp.</p>
                 </div>
 
 
