added new menu item FAQ

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <li class="nav-item">
                 <a href="/routes/index.html" class="nav-link">Routes</a>
             </li>
+            <li class="nav-item">
+                <a href="/#FAQ" class="nav-link">FAQ</a>
+            </li>
         </ul>
 
  <!-- Mobile Menu -->
@@ -82,6 +85,7 @@
   <a href="/about/index.html" class="mobile-nav-link">About</a>
   <a href="/contact/contact.html" class="mobile-nav-link">Contact</a>
   <a href="/routes/index.html" class="mobile-nav-link">Routes</a>
+  <a href="/#FAQ" class="mobile-nav-link">FAQ</a>
 </div>
 </nav>
 </header>
@@ -408,7 +412,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
 
 <!-- Frequently asked questions -->
 <section>
-    <section class="bg-white dark:bg-gray-900">
+    <section class="bg-white dark:bg-gray-900" id="FAQ">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
       <h2 class="mb-8 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Frequently asked questions</h2>
       <div class="grid pt-8 text-left border-t border-gray-200 md:gap-16 dark:border-gray-700 md:grid-cols-2">
@@ -443,6 +447,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
     </h3>
     <p class="text-gray-500 dark:text-gray-400">Our community offers much more than just our weekly Thursday runs! We regularly organize various events and activities, including:</p>
     <ul class="list-disc pl-5 text-gray-500 dark:text-gray-400 mt-3">
+      <li class="mb-1"><span class="font-bold">Social Skitour evenings</span> where we meet at the slopes around Innsbruck after work.</li>
         <li class="mb-1"><span class="font-bold">Workshops</span> on specific skills like running with poles.</li>
         <li class="mb-1">Specialized <span class="font-bold">courses</span> such as avalanche safety and cross-country skiing, perfect for mountain enthusiasts in Innsbruck.</li>
         <li class="mb-1">Additional <span class="font-bold">community runs</span> on weekends and other weekdays, sometimes even bike rides for cross-training.</li>
