changed styling of event cards

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -215,7 +215,7 @@
             <p id="modal-location"></p>
             <p id="modal-desc"></p>
             <div>
-                <a id="modal-book-link" href="#" target="_blank" class="modal-cta">Book</a>
+                <a id="modal-book-link" href="#" target="_blank" class="modal-cta">Register here</a>
                 <a id="modal-cal-link" href="#" target="_blank" class="add-to-cal-btn">📅 Add to Calendar</a>
             </div>
         </div>
