--- a/index.html
+++ b/index.html
@@ -308,20 +308,22 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
       <!-- Card -->
       <article class="flex rounded-lg shadow bg-gray-50 dark:bg-gray-800 overflow-hidden">
         <div class="team-pic">
-          <img src="/assets/img/andi-square.png" alt="Andreas Avatar" loading="lazy">
+          <img src="/assets/img/marie-square.jpeg" alt="Marie Avatar" loading="lazy">
         </div>
         <div class="p-5">
           <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-            <a href="#"><span class="text-2xl mr-3">🇩🇪</span>Andreas</a>
+            <a href="#"><span class="text-2xl mr-3">🇩🇪</span>Marie</a>
           </h3>
           <span class="text-gray-500 dark:text-gray-400">Guide</span>
           <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
-            Our resident student—and yes, a German, but fluent in Dutch! Currently recovering from a broken leg, yet always the one to lift the group's spirits.
+            Big fan of very long runs, nighttime adventures, lake swims and summit sunrises/sunsets, as long as the snacks are right. 
+            Usually leading the Discovery Run.
           </p>
           <ul class="flex space-x-4">
-            <li><a href="https://www.strava.com/athletes/43287704?oq=andre" target="_blank" aria-label="Andreas on Strava"><i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
-            <li><a href="https://www.instagram.com/andreasrosenecker" target="_blank" aria-label="Andreas on Instagram"><i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
-          </ul>
+            <li><a href="https://strava.app.link/QAjv9RIUq0b" target="_blank" aria-label="Marie on Strava"><i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+            <li><a href="https://www.instagram.com/marieonetten_tanz/" target="_blank" aria-label="Marie on Instagram"><i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/marie-k%C3%B6hl-b84941122?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" aria-label="Marie on LinkedIn"><i class="fab fa-linkedin text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+        </ul>
         </div>
       </article>
 
