added matthias to crew cards

--- a/index.html
+++ b/index.html
@@ -346,6 +346,27 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
         </div>
       </article>
 
+
+            <!-- Card -->
+      <article class="flex rounded-lg shadow bg-gray-50 dark:bg-gray-800 overflow-hidden">
+        <div class="team-pic">
+          <img src="/assets/img/matthias-square.jpeg" alt="Matthias Avatar" loading="lazy">
+        </div>
+        <div class="p-5">
+          <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
+            <a href="#"><span class="text-2xl mr-3">🇩🇪</span>Matthias</a>
+          </h3>
+          <span class="text-gray-500 dark:text-gray-400">Guide</span>
+          <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
+            Matthias was a regular runner with DNA Trails long before joining the team as a guide. A father of two with a busy schedule, he still finds time for the trails and enjoys going long.
+          </p>
+          <ul class="flex space-x-4">
+            <li><a href="https://www.strava.com/athletes/18425416" target="_blank" aria-label="Matthias on Strava"><i class="fab fa-strava text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+         <li><a href="https://www.instagram.com/matthias_perk?igsh=OWh5ZjRiOHc5dmNy" target="_blank" aria-label="Matthias on Instagram"><i class="fab fa-instagram text-2xl text-pink-500 hover:text-pink-600"></i></a></li>
+        </ul>
+        </div>
+      </article>
+
     </div>
   </div>
 </section>
