changed matthias flag from german to austrian

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ Our mission is to make trail running accessible, free, and fun for everyone, no 
         </div>
         <div class="p-5">
           <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-            <a href="#"><span class="text-2xl mr-3">🇩🇪</span>Matthias</a>
+            <a href="#"><span class="text-2xl mr-3">🇦🇹</span>Matthias</a>
           </h3>
           <span class="text-gray-500 dark:text-gray-400">Guide</span>
           <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
